// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`importSync > with presets > babel7 > importSync accepts template argument with dynamic part 1`] = `
"function _typeof(o) { "@babel/helpers - typeof"; return _typeof = "function" == typeof Symbol && "symbol" == typeof Symbol.iterator ? function (o) { return typeof o; } : function (o) { return o && "function" == typeof Symbol && o.constructor === Symbol && o !== Symbol.prototype ? "symbol" : typeof o; }, _typeof(o); }
function _defineProperty(e, r, t) { return (r = _toPropertyKey(r)) in e ? Object.defineProperty(e, r, { value: t, enumerable: !0, configurable: !0, writable: !0 }) : e[r] = t, e; }
function _toPropertyKey(t) { var i = _toPrimitive(t, "string"); return "symbol" == _typeof(i) ? i : i + ""; }
function _toPrimitive(t, r) { if ("object" != _typeof(t) || !t) return t; var e = t[Symbol.toPrimitive]; if (void 0 !== e) { var i = e.call(t, r || "default"); if ("object" != _typeof(i)) return i; throw new TypeError("@@toPrimitive must return a primitive value."); } return ("string" === r ? String : Number)(t); }
import esc from "../../src/addon/es-compat2";
import * as _importSync20 from "../../README";
import * as _importSync40 from "../../node_modules";
import * as _importSync60 from "../../package";
import * as _importSync80 from "../../smoke-test";
import * as _importSync00 from "../../src";
import * as _importSync100 from "../../tests";
import * as _importSync120 from "../../tsconfig";
import * as _importSync140 from "../../tsconfig";
import * as _importSync160 from "../../vitest.config";
function getFile(file) {
  return _defineProperty(_defineProperty({
    "README": esc(_importSync20),
    "node_modules": esc(_importSync40),
    "package": esc(_importSync60),
    "smoke-test": esc(_importSync80),
    "src": esc(_importSync00),
    "tests": esc(_importSync100),
    "tsconfig": esc(_importSync120)
  }, "tsconfig", esc(_importSync140)), "vitest.config", esc(_importSync160))[file].default;
}"
`;

exports[`importSync > without presets > babel7 > importSync accepts template argument with dynamic part 1`] = `
"import esc from "../../src/addon/es-compat2";
import * as _importSync20 from "../../README";
import * as _importSync40 from "../../node_modules";
import * as _importSync60 from "../../package";
import * as _importSync80 from "../../smoke-test";
import * as _importSync00 from "../../src";
import * as _importSync100 from "../../tests";
import * as _importSync120 from "../../tsconfig";
import * as _importSync140 from "../../tsconfig";
import * as _importSync160 from "../../vitest.config";
function getFile(file) {
  return {
    "README": esc(_importSync20),
    "node_modules": esc(_importSync40),
    "package": esc(_importSync60),
    "smoke-test": esc(_importSync80),
    "src": esc(_importSync00),
    "tests": esc(_importSync100),
    "tsconfig": esc(_importSync120),
    "tsconfig": esc(_importSync140),
    "vitest.config": esc(_importSync160)
  }[file].default;
}"
`;
